--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -41,7 +42,9 @@ dependencies {
     compile 'com.google.android.gms:play-services:9.6.1'
     compile 'com.tonicartos:superslim:0.4.13'
     compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.wang.avi:library:2.1.3'
     testCompile 'junit:junit:4.12'
+    compile 'com.google.code.gson:gson:2.8.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
