--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile 'com.google.firebase:firebase-core:9.8.0'
     compile 'com.google.firebase:firebase-messaging:9.8.0'
     compile 'com.google.android.gms:play-services-maps:9.8.0'
+    compile 'com.google.android.gms:play-services-location:9.8.0'
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.wang.avi:library:2.1.3'
     compile 'com.google.code.gson:gson:2.8.0'
