--- a/web_api/.env
+++ b/web_api/.env
@@ -4,7 +4,7 @@ APP_KEY=base64:QcX5jGvlcJbk5iMiEFHTLWAS6zEOm2aJRvr3bVBIsNQ=
 APP_URL=http://localhost
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=5432
 DB_DATABASE=who_is_in
 DB_USERNAME=postgres
