Create match without style

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile 'info.hoang8f:android-segmented:1.0.6'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.2'
+    compile 'com.philliphsu:bottomsheetpickers:2.0.2'
     testCompile 'junit:junit:4.12'
 }
 
