--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.soccer.whosin">
 
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -60,7 +62,10 @@
         <activity
             android:name=".groups.create_group.CreateGroupActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity android:name=".matches.NewMatchActivity" />
+        <activity
+            android:name=".matches.NewMatchActivity"
+            android:label="@string/new_match"
+            android:windowSoftInputMode="stateHidden|adjustResize"/>
         <activity
             android:name=".matches.ShowMatchActivity"
             android:label="@string/show_match" />
