--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.2'
     compile 'com.philliphsu:bottomsheetpickers:2.0.2'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:cardview-v7:24.2.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
